# feedback-intelligence-agent

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: docker-compose.prod.yml  ecs-fargate-task-definition.json  fly.toml
docs/: case_study.md  deployment.md
frontend/: README.md  index.html  package.json
frontend/src/: api.ts
scripts/: benchmark.py
src/ai_engineering_showcase/: agent.py  api.py  benchmarking.py  citations.py  cli.py  config.py  data_contracts.py  embeddings.py  evaluation.py  experiments.py  factory.py  ingestion.py  jobs.py  llm.py  prompts.py  qdrant_store.py  retrieval.py  schemas.py  vector_store.py
src/feedback_intelligence_agent/: __init__.py  agent.py  api.py  cli.py  config.py  factory.py  llm.py  qdrant_store.py
tests/: test_api.py  test_benchmarking.py  test_citations.py  test_cli.py  test_data_contracts.py  test_embeddings_and_store.py  test_evaluation.py  test_guardrails.py  test_jobs.py  test_prompt_registry.py  test_qdrant_store.py  test_telemetry.py
