[tool.poetry]
name = "ai-engineering-showcase"
version = "0.1.0"
description = "A production-style AI engineering showcase repository with RAG, evaluation, FastAPI, and local deterministic LLM fallback."
authors = ["Diogo Ribeiro <hansolo.dj@gmail.com>"]
readme = "README.md"
packages = [{ include = "ai_engineering_showcase", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
httpx = "^0.27.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.1"
typer = { version = "^0.12.3", extras = ["all"] }
uvicorn = { version = "^0.30.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
pandas-stubs = "^2.2.2"

[tool.poetry.scripts]
ai-showcase = "ai_engineering_showcase.cli:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = [".venv", "dist", "build"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
