[tool.poetry]
name = "feedback-intelligence-agent"
version = "0.1.0"
description = "A production-style AI engineering project with RAG, evaluation, FastAPI, and local deterministic LLM fallback."
authors = ["Diogo Ribeiro <hansolo.dj@gmail.com>"]
readme = "README.md"
packages = [{ include = "feedback_intelligence_agent", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.137.0"
httpx = "^0.27.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.1"
typer = { version = "^0.12.3", extras = ["all"] }
uvicorn = { version = "^0.30.0", extras = ["standard"] }
click = ">=8.1.7,<8.2"
pyyaml = "^6.0.3"
anthropic = { version = ">=0.40,<2.0", optional = true }
qdrant-client = { version = ">=1.7,<2.0", optional = true }
starlette = ">=1.3.1,<2.0"

[tool.poetry.extras]
anthropic = ["anthropic"]
qdrant = ["qdrant-client"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^9.1.0"
pytest-cov = "^7.0.0"
ruff = "^0.5.0"
pandas-stubs = "^2.2.2"
types-pyyaml = "^6.0.12.20260518"

[tool.poetry.scripts]
feedback-agent = "feedback_intelligence_agent.cli:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = [".venv", "dist", "build"]

[[tool.mypy.overrides]]
# The anthropic SDK is an optional extra; type-checking must pass whether or
# not it is installed in the environment.
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# qdrant-client is an optional extra; type-checking must pass whether or not it
# is installed in the environment.
module = ["qdrant_client", "qdrant_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
